address controller wip. need to add notifications
