# storage/api-docs/api-docs.json
@@ -54,6 +54,58 @@
                 }
             }
         },
+        "/api/register": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Register a new user",
+                "operationId": "14a901c030e00a717962d8cacfba0a1d",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "email",
+                                    "password",
+                                    "password_confirmation"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "John Doe"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "format": "email",
+                                        "example": "john@example.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "12345678"
+                                    },
+                                    "password_confirmation": {
+                                        "type": "string",
+                                        "example": "12345678"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Registration successful"
+                    },
+                    "422": {
+                        "description": "Validation error"
+                    }
+                }
+            }
+        },
         "/api/addresses/{genre_id}": {
             "get": {
                 "tags": [
@@ -113,6 +165,15 @@
                 "operationId": "fd419200d38d47652108be88f7f86db5",
                 "parameters": [
                     {
+                        "name": "Accept",
+                        "in": "header",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "default": "application/json"
+                        }
+                    },
+                    {
                         "name": "genre_id",
                         "in": "path",
                         "description": "Genre ID",
@@ -141,6 +202,16 @@
                             "type": "string"
                         },
                         "example": "76"
+                    },
+                    {
+                        "name": "instance_id",
+                        "in": "query",
+                        "description": "Case instance id",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "1"
                     }
                 ],
                 "responses": {
@@ -149,6 +220,12 @@
                     },
                     "404": {
                         "description": "Not found"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
                     }
                 },
                 "security": [
@@ -156,6 +233,29 @@
                         "bearerAuth": []
                     }
                 ]
+            }
+        },
+        "/api/genres": {
+            "get": {
+                "tags": [
+                    "Genres"
+                ],
+                "summary": "Get a list of genres",
+                "operationId": "e40500843f5dd80e6292f4edd20a01a1",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    }
+                }
+            }
+        }
+    },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "bearerFormat": "Token",
+                "scheme": "bearer"
             }
         }
     },
@@ -167,6 +267,10 @@
         {
             "name": "Addresses",
             "description": "Addresses"
+        },
+        {
+            "name": "Genres",
+            "description": "Genres"
         }
     ]
 }
